@startuml Quiz_Project class Diagram

class Person {
  name: string
  id: number
  answer : array
  password : number
  email : string
  constructor(name, id , password,email )
  addAnswer(answer) {
  login(userEmail,userPassword)
  }

class Question {
  questions : array
  answers : array
  quizAnswers :array
  newQuestionAdd(questionText, answersText, correctAnswer)
  getQuestion()
  getAnswer()
  getQuizAnswers()
  getQuestionsLength()
}

class Quiz {
  type : string
  timer : boolean
  level : boolean
}

Question "0..*" --> "1"Quiz
Person"0...*" --> Question
Person"0..*" --> "0..*"Quiz
Quiz"0..*" --> "0..*"Person

@enduml